move to java 17 (whoops)